<resources>
    <string name="app_name">NavigationComponentShowCase</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- Navigation String -->
    <string name="action_next">NEXT</string>
    <string name="action_done">DONE</string>

    <string name="label_home">Home</string>
    <string name="button_view_balances">View balances</string>
    <string name="button_pay_someone">Pay someone</string>

    <string name="label_view_balances">View Balances</string>
    <string name="first_account_name">First account</string>
    <string name="first_account_number">121-476-489</string>
    <string name="first_account_balance">1 000.00</string>
    <string name="second_account_name">Second account</string>
    <string name="second_account_number">987-654-321</string>
    <string name="second_account_balance">-100.00</string>

    <string name="label_view_people">People</string>

    <string name="label_pay_person">Pay Someone</string>
    <string name="hint_account_number">From account number</string>
    <string name="hint_amount">Amount</string>
    <string name="button_view_disclaimer">Disclaimer</string>

    <string name="label_view_disclaimer">Disclaimer</string>

    <string name="label_payment_complete">Payment Complete</string>
    <string name="message_payment_complete">Payment complete!</string>
    <string name="hint_payment_to">Payment to</string>



    <string name="action_settings">Settings</string>
    <string name="email">Email Id</string>
    <string name="passowrd">Password</string>
    <string name="login">LOGIN</string>
    <string name="registration">REGISTRATION</string>
    <string name="reglogin">REGISTER &amp; LOGIN</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="fullName">Full Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="location">Location</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>

</resources>
