<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.experiment.navigationcomponentshowcase.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_navigation_home_to_viewBalancesFragment"
            app:destination="@id/viewBalancesFragment" />
        <action
            android:id="@+id/action_navigation_home_to_viewPeopleFragment"
            app:destination="@id/viewPeopleFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.experiment.navigationcomponentshowcase.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.experiment.navigationcomponentshowcase.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/viewBalancesFragment"
        android:name="com.experiment.navigationcomponentshowcase.ui.checkbalance.ViewBalancesFragment"
        android:label="Balances"
        tools:layout="@layout/fragment_check_balances" />
    <fragment
        android:id="@+id/viewPeopleFragment"
        android:name="com.experiment.navigationcomponentshowcase.ui.sendmoney.ViewPeopleFragment"
        android:label="Contacts"
        tools:layout="@layout/fragment_view_people" />
</navigation>
